Add semantic pass and AST resolution
- Add new semantic pass to resolve symbols, validate and annotate AST nodes with resolution.
- Update Parser of TCBScript to support annotation on separated line, along with continue using BREAK token instead of CONTINUE token.
- Add test for semantic pass.
- API manifest index now record final status, APIManifest and APIType are updated to handle it accordingly.
- Add native access flag for test run configuration, bump JOML version to 1.10.9.