@@ -52,6 +52,7 @@ repositories {
 
 test {
     useJUnitPlatform()
+    jvmArgs('--enable-native-access=ALL-UNNAMED')
 }
 
 generateGrammarSource {
